// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropCap renders a dropcap for large scale 1`] = `
<View
  style={
    Object {
      "height": 84.546,
      "overflow": "visible",
      "width": 300,
    }
  }
>
  <View
    style={
      Object {
        "left": 0,
        "position": "absolute",
        "top": -2,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "#13354E",
            "fontFamily": "TimesModern-Regular",
            "fontSize": 109.90980000000002,
            "lineHeight": 109.90980000000002,
          },
        ]
      }
    >
      A
    </Text>
  </View>
</View>
`;

exports[`DropCap renders a dropcap for medium scale 1`] = `
<View
  style={
    Object {
      "height": 72.468,
      "overflow": "visible",
      "width": 300,
    }
  }
>
  <View
    style={
      Object {
        "left": 0,
        "position": "absolute",
        "top": -2,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "#13354E",
            "fontFamily": "TimesModern-Regular",
            "fontSize": 94.20840000000001,
            "lineHeight": 94.20840000000001,
          },
        ]
      }
    >
      A
    </Text>
  </View>
</View>
`;

exports[`DropCap renders a dropcap for xlarge scale 1`] = `
<View
  style={
    Object {
      "height": 92.598,
      "overflow": "visible",
      "width": 300,
    }
  }
>
  <View
    style={
      Object {
        "left": 0,
        "position": "absolute",
        "top": -2,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "#13354E",
            "fontFamily": "TimesModern-Regular",
            "fontSize": 120.37740000000001,
            "lineHeight": 120.37740000000001,
          },
        ]
      }
    >
      A
    </Text>
  </View>
</View>
`;

exports[`DropCap renders a dropcap with default font padding if provided font not in map 1`] = `
<View
  style={
    Object {
      "height": 72.468,
      "overflow": "visible",
      "width": 300,
    }
  }
>
  <View
    style={
      Object {
        "left": 0,
        "position": "absolute",
        "top": -2,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "#13354E",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 94.20840000000001,
            "lineHeight": 94.20840000000001,
          },
        ]
      }
    >
      A
    </Text>
  </View>
</View>
`;

exports[`DropCap renders a dropcap with default scale if provided scale unknown 1`] = `
<View
  style={
    Object {
      "height": 72.468,
      "overflow": "visible",
      "width": 300,
    }
  }
>
  <View
    style={
      Object {
        "left": 0,
        "position": "absolute",
        "top": -2,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "#13354E",
            "fontFamily": "TimesModern-Regular",
            "fontSize": 94.20840000000001,
            "lineHeight": 94.20840000000001,
          },
        ]
      }
    >
      A
    </Text>
  </View>
</View>
`;
